fixes a lot of layout issues with the new icons

--- a/assets/css/base/_general.scss
+++ b/assets/css/base/_general.scss
@@ -54,7 +54,6 @@ code {
   float: left;
   height: 45px;
   margin-right: 10px;
-  fill: currentColor;
 }
 
 .collapsing {
