--- a/assets/css/template/_home.scss
+++ b/assets/css/template/_home.scss
@@ -197,6 +197,10 @@
       border: 0;
       border-radius: 4px 0 0 4px;
     }
+
+    .btn {
+      padding: 6px 12px 4px;
+    }
   }
 }
 
