--- a/assets/css/template/_navbar.scss
+++ b/assets/css/template/_navbar.scss
@@ -85,6 +85,7 @@
   button.btn {
     color: #adb3b6;
     background: $color-white;
+    padding: 5px 12px;
   }
 }
 
